--- a/Multiclass Classification/fruits_classification.ipynb
+++ b/Multiclass Classification/fruits_classification.ipynb
@@ -677,6 +677,15 @@
         "else:\n",
         "  print(f'Grape')"
       ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "model.save(os.path.join('models', 'fruits_classification.h5'))"
+      ]
     }
   ],
   "metadata": {
