show each layers output

--- a/Multiclass Classification/fruits_classification.ipynb
+++ b/Multiclass Classification/fruits_classification.ipynb
@@ -631,7 +631,7 @@
         }
       ],
       "source": [
-        "img = cv2.imread('/content/drive/MyDrive/ImageClassification/input/apple/-half-and-green-apple-leaf-isolated-on-white-background-apples-and-699645961.jpg')\n",
+        "img = cv2.imread('input/apple/-half-and-green-apple-leaf-isolated-on-white-background-apples-and-699645961.jpg')\n",
         "img=cv2.cvtColor(img, cv2.COLOR_RGB2BGR)\n",
         "resize = tf.image.resize(img, (256,256))\n",
         "plt.imshow(resize.numpy().astype(int))\n",
@@ -697,9 +697,9 @@
     },
     "gpuClass": "standard",
     "kernelspec": {
-      "display_name": "started",
+      "display_name": "Python 3.8.9 64-bit",
       "language": "python",
-      "name": "started"
+      "name": "python3"
     },
     "language_info": {
       "codemirror_mode": {
@@ -711,7 +711,12 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.7.3"
+      "version": "3.8.9"
+    },
+    "vscode": {
+      "interpreter": {
+        "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
+      }
     }
   },
   "nbformat": 4,
